--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#ff9800</color>
     <color name="colorAccent">#ffb74d</color>
     <color name="grey">#bfbfbf</color>
+    <color name="light_grey">#E6E6E6</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
 
