--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,17 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SearchFragment">
 
-    <TextView
-        android:text="this is search"
-        android:textSize="26sp"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </TextView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_rectangle"
+        android:layout_margin="20dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_search_bubble"
+            android:layout_gravity="center"
+            android:layout_marginStart="5dp"/>
+        <EditText
+            android:id="@+id/edit_text_search"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:hint="Search"
+            android:textSize="18sp"
+            android:gravity="bottom"
+            android:alpha="0.8"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="5dp"
+            android:singleLine="true"
+            />
+
+    </LinearLayout>
+
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:src="@drawable/ic_search"-->
+<!--        col/>-->
+
 
 </FrameLayout>
