--- a/app/src/main/res/layout/item_partner.xml
+++ b/app/src/main/res/layout/item_partner.xml
@@ -21,9 +21,9 @@
         android:layout_margin="10dp">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="40"
-            android:layout_height="40"
+            android:id="@+id/iv_result_img"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="8dp"
             android:src="@drawable/pic_sample_avatar"
@@ -39,9 +39,9 @@
             android:layout_marginStart="16dp"
             android:text="John"
             android:textColor="@color/black"
-            android:textSize="22dp"
+            android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/iv_result_img"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -49,8 +49,9 @@
             android:layout_width="165dp"
             android:layout_height="17dp"
             android:layout_marginStart="8dp"
+            android:layout_marginBottom="7dp"
             android:text="1 km away"
-            android:textSize="10dp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_partner_name" />
 
