working on edit profile

--- a/app/src/main/res/navigation/bottom_navigation_graph.xml
+++ b/app/src/main/res/navigation/bottom_navigation_graph.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,12 +10,16 @@
         android:id="@+id/homeFragment"
         android:name="postpc.studypartner2.HomeFragment"
         tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/searchFragment"
         android:name="postpc.studypartner2.Search.SearchResultsFragment"
         tools:layout="@layout/fragment_search_results">
+
     </fragment>
     <!--        todo: change to search -->
 <!--    <fragment-->
