--- a/app/src/main/res/navigation/bottom_navigation_graph.xml
+++ b/app/src/main/res/navigation/bottom_navigation_graph.xml
@@ -15,18 +15,18 @@
             app:destination="@id/profileFragment" />
     </fragment>
 
-    <fragment
-        android:id="@+id/searchFragment"
-        android:name="postpc.studypartner2.Search.SearchResultsFragment"
-        tools:layout="@layout/fragment_search_results">
-
-    </fragment>
-    <!--        todo: change to search -->
 <!--    <fragment-->
 <!--        android:id="@+id/searchFragment"-->
-<!--        android:name="postpc.studypartner2.SearchFragment"-->
-<!--        tools:layout="@layout/fragment_search">-->
+<!--        android:name="postpc.studypartner2.Search.Results.SearchResultsFragment"-->
+<!--        tools:layout="@layout/fragment_search_results">-->
+
 <!--    </fragment>-->
+    <!--        todo: change to search -->
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="postpc.studypartner2.Search.SearchFragment"
+        tools:layout="@layout/fragment_search">
+    </fragment>
 
     <fragment
         android:id="@+id/conversationsFragment"
