--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -13,7 +13,8 @@
         android:background="@drawable/rounded_rectangle"
         android:layout_margin="20dp">
 
-        <ImageView
+        <ImageButton
+            android:id="@+id/button_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_search_bubble"
