--- a/app/src/main/res/navigation/bottom_navigation_graph.xml
+++ b/app/src/main/res/navigation/bottom_navigation_graph.xml
@@ -26,6 +26,9 @@
         android:id="@+id/searchFragment"
         android:name="postpc.studypartner2.Search.SearchFragment"
         tools:layout="@layout/fragment_search">
+        <action
+            android:id="@+id/action_searchFragment_to_searchResultsFragment"
+            app:destination="@id/searchResultsFragment" />
     </fragment>
 
     <fragment
@@ -46,5 +49,10 @@
         android:name="postpc.studypartner2.Profile.ProfileFragment"
         tools:layout="@layout/fragment_profile">
     </fragment>
+    <fragment
+        android:id="@+id/searchResultsFragment"
+        android:name="postpc.studypartner2.Search.Results.SearchResultsFragment"
+        android:label="fragment_search_results"
+        tools:layout="@layout/fragment_search_results" />
 
 </navigation>
