--- a/app/src/main/res/navigation/bottom_navigation_graph.xml
+++ b/app/src/main/res/navigation/bottom_navigation_graph.xml
@@ -25,11 +25,7 @@
     <fragment
         android:id="@+id/searchFragment"
         android:name="postpc.studypartner2.Search.Results.SearchFragment"
-        tools:layout="@layout/fragment_search">
-        <action
-            android:id="@+id/action_searchFragment_to_searchResultsFragment"
-            app:destination="@id/searchResultsFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_search"/>
 
     <fragment
         android:id="@+id/conversationsFragment"
@@ -49,10 +45,5 @@
         android:name="postpc.studypartner2.Profile.ProfileFragment"
         tools:layout="@layout/fragment_profile">
     </fragment>
-    <fragment
-        android:id="@+id/searchResultsFragment"
-        android:name="postpc.studypartner2.Search.Results.SearchResultsFragment"
-        android:label="fragment_search_results"
-        tools:layout="@layout/fragment_search_results" />
 
 </navigation>
