--- a/app/src/main/res/layout/snippet_profile_courses.xml
+++ b/app/src/main/res/layout/snippet_profile_courses.xml
@@ -31,12 +31,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/courses_recycler_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:paddingHorizontal="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleCourses"
-        android:paddingHorizontal="10dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        tools:listitem="@layout/item_course" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
