--- a/app/src/main/res/navigation/bottom_navigation_graph.xml
+++ b/app/src/main/res/navigation/bottom_navigation_graph.xml
@@ -13,15 +13,11 @@
         <action
             android:id="@+id/action_homeFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_searchFragment"
+            app:destination="@id/searchFragment" />
     </fragment>
 
-<!--    <fragment-->
-<!--        android:id="@+id/searchFragment"-->
-<!--        android:name="postpc.studypartner2.Search.Results.SearchResultsFragment"-->
-<!--        tools:layout="@layout/fragment_search_results">-->
-
-<!--    </fragment>-->
-    <!--        todo: change to search -->
     <fragment
         android:id="@+id/searchFragment"
         android:name="postpc.studypartner2.Search.Results.SearchFragment"
