--- a/app/src/main/res/layout/item_time_slot.xml
+++ b/app/src/main/res/layout/item_time_slot.xml
@@ -7,23 +7,20 @@
     android:layout_marginTop="@dimen/mtrl_card_spacing"
     android:layout_marginRight="@dimen/mtrl_card_spacing"
     app:cardBackgroundColor="@color/white"
+    android:layout_gravity="center_horizontal"
     app:strokeColor="@color/grey"
     app:strokeWidth="1dp"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:id="@+id/timeSlotTimesCard">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/msgText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="13dp"
-            android:layout_marginVertical="10dp"
-            android:textSize="18dp"
-            android:text="6:00-7:00"/>
-
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/timeSlotTimesText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:textSize="16dp"
+        android:text="6:00-7:00"/>
 
 </com.google.android.material.card.MaterialCardView>
