--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="search_bubble_bg">#D5D5D5</color>
-
+    <color name="grey_text">#808080</color>
     <color name="msgBackground">#D3D3D3</color>
 </resources>
