--- a/app/src/main/res/navigation/bottom_navigation_graph.xml
+++ b/app/src/main/res/navigation/bottom_navigation_graph.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="postpc.studypartner2.Partners.HomeFragment"
+        android:name="postpc.studypartner2.partners.HomeFragment"
         tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_profileFragment"
@@ -23,12 +23,12 @@
 
     <fragment
         android:id="@+id/searchFragment"
-        android:name="postpc.studypartner2.Search.Results.SearchFragment"
+        android:name="postpc.studypartner2.Search.results.SearchFragment"
         tools:layout="@layout/fragment_search"/>
 
     <fragment
         android:id="@+id/conversationsFragment"
-        android:name="postpc.studypartner2.Chat.ChatFragment"
+        android:name="postpc.studypartner2.chat.ChatFragment"
         tools:layout="@layout/fragment_chat">
     </fragment>
 <!--        todo: change to conversations -->
@@ -41,12 +41,12 @@
 
     <fragment
         android:id="@+id/profileFragment"
-        android:name="postpc.studypartner2.Profile.ProfileFragment"
+        android:name="postpc.studypartner2.profile.ProfileFragment"
         tools:layout="@layout/fragment_profile">
     </fragment>
     <fragment
         android:id="@+id/calendarFragment"
-        android:name="postpc.studypartner2.Calendar.CalendarFragment"
+        android:name="postpc.studypartner2.calendar.CalendarFragment"
         android:label="fragment_calendar"
         tools:layout="@layout/fragment_calendar" />
 
