--- a/app/src/main/res/drawable-anydpi/ic_arrow_back.xml
+++ b/app/src/main/res/drawable-anydpi/ic_arrow_back.xml
@@ -7,5 +7,5 @@
     android:alpha="1">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
+        android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
 </vector>
