notifications (for messages) work!!!

--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -15,7 +15,7 @@
 
     </item>
     <item
-        android:id="@+id/conversationsFragment"
+        android:id="@+id/chatFragment"
         android:icon="@drawable/ic_mail"
         android:title="@string/menu_chat"
         >
