--- a/app/src/main/res/navigation/bottom_navigation_graph.xml
+++ b/app/src/main/res/navigation/bottom_navigation_graph.xml
@@ -40,7 +40,7 @@
 
 <!--    <fragment-->
 <!--        android:id="@+id/conversationsFragment"-->
-<!--        android:name="postpc.studypartner2.ConversationsFragment"-->
+<!--        android:name="postpc.studypartner2.chat.ConversationsFragment"-->
 <!--        tools:layout="@layout/fragment_conversations"/>-->
 
     <fragment
@@ -69,7 +69,7 @@
     <include app:graph="@navigation/conversations_navigation_graph" />
     <fragment
         android:id="@+id/conversationsFragment2"
-        android:name="postpc.studypartner2.ConversationsFragment"
+        android:name="postpc.studypartner2.chat.ConversationsFragment"
         android:label="fragment_conversations"
         tools:layout="@layout/fragment_conversations" />
 
