--- a/app/src/main/res/layout/item_partner.xml
+++ b/app/src/main/res/layout/item_partner.xml
@@ -67,6 +67,7 @@
             app:layout_constraintStart_toEndOf="@+id/tv_distance" />
 
         <ImageView
+            android:id="@+id/item_partner_chat_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_chat"
