--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,7 +7,7 @@
     tools:context=".Search.results.SearchFragment">
 
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/search_filters_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,23 +21,29 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_search_bubble"
             android:layout_gravity="center"
-            android:layout_marginStart="5dp"/>
+            android:layout_marginStart="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
         <EditText
             android:id="@+id/edit_text_search_course"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:textColor="@color/grey_text"
+            android:background="@android:color/transparent"
             android:hint="Course Number"
             android:textSize="18sp"
-            android:gravity="bottom"
-            android:alpha="0.8"
+            android:gravity="start"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="5dp"
             android:singleLine="true"
             android:inputType="number"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/button_search"
             />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/searchRecyclerView"
