--- a/app/src/main/res/layout/item_course.xml
+++ b/app/src/main/res/layout/item_course.xml
@@ -3,9 +3,7 @@
     style="@style/Widget.MaterialComponents.CardView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/mtrl_card_spacing"
-    android:layout_marginTop="@dimen/mtrl_card_spacing"
-    android:layout_marginRight="@dimen/mtrl_card_spacing"
+    android:layout_margin="2dp"
     app:cardCornerRadius="20dp"
     app:cardBackgroundColor="@color/colorAccent"
     android:padding="10dp">
@@ -18,11 +16,11 @@
             android:id="@+id/courseNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="13dp"
-            android:layout_marginVertical="10dp"
-            android:textSize="18dp"
+            android:layout_margin="10dp"
+            android:fontFamily="sans-serif-light"
+            android:text="Course Name"
             android:textColor="@color/dark_grey"
-            android:text="Course Name"/>
+            android:textSize="14dp" />
 
     </LinearLayout>
 
